Fix the paths and made responsive better

--- a/scss/_background.scss
+++ b/scss/_background.scss
@@ -14,7 +14,7 @@
 .leaf {
     position: absolute;
     top: -10%;
-    background-image: url('/assets/images/one-leaf-nobg.png');
+    background-image: url('../assets/images/one-leaf-nobg.png');
     background-size: contain;
     background-repeat: no-repeat;
     opacity: 0.8;
