--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,7 +2,7 @@
 
 body {
     font-family: $font-stack;
-    background: url('/assets/images/bamboo-forest-bg.jpg') no-repeat center center fixed;
+    background: url('../assets/images/bamboo-forest-bg.jpg') no-repeat center center fixed;
     background-size: cover;
     color: $text-color-dark;
     min-height: 100vh;
